--- a/src/components/dashboard/IndexCardTitle.module.scss
+++ b/src/components/dashboard/IndexCardTitle.module.scss
@@ -4,10 +4,12 @@
   align-items: baseline;
 
   .title {
-    font-size: 32px;
+    font-size: 20px;
+    opacity: 0.8;
   }
 
   .desc {
-    font-size: 14px;
+    font-size: 12px;
+    opacity: 0.8;
   }
 }
