--- a/src/pages/dashboard/index.module.scss
+++ b/src/pages/dashboard/index.module.scss
@@ -1,6 +1,6 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   column-gap: 16px;
   row-gap: 16px;
 }
@@ -29,6 +29,13 @@
   .processCard {
     display: grid;
     grid-template-columns: 1fr 1fr;
+  }
+}
+
+.secondaryText {
+  color: rgba(0, 0, 0, 0.3);
+  &.dark {
+    color: rgba(255, 255, 255, 0.3);
   }
 }
 
