--- a/src/pages/dashboard/index.module.scss
+++ b/src/pages/dashboard/index.module.scss
@@ -32,6 +32,12 @@
   }
 }
 
+.vDesc {
+  padding-top: 24px;
+  font-size: 12px;
+  padding-left: 16px;
+}
+
 .secondaryText {
   color: rgba(0, 0, 0, 0.3);
   &.dark {
