--- a/src/components/request-order/ActionModal.module.scss
+++ b/src/components/request-order/ActionModal.module.scss
@@ -3,3 +3,23 @@
   grid-row-gap: 8px;
   padding-left: 16px;
 }
+
+.modalItem {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+}
+
+.modalLabel {
+  color: rgba(0, 0, 0, 0.5);
+
+  &.dark {
+    color: rgba(255, 255, 255, 0.5);
+  }
+}
+
+.modalValue {
+  display: inline-block;
+  padding-left: 10px;
+  width: 100%;
+}
