--- a/src/components/request-order/ActionModal.module.scss
+++ b/src/components/request-order/ActionModal.module.scss
@@ -8,6 +8,10 @@
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
+
+  &.top {
+    align-items: start;
+  }
 }
 
 .modalLabel {
