--- a/src/components/rate/RateValue.module.scss
+++ b/src/components/rate/RateValue.module.scss
@@ -7,6 +7,11 @@
   justify-content: start;
   grid-column-gap: 1rem;
   grid-row-gap: 1rem;
+
+  &.small {
+    grid-template-columns: 1fr;
+    grid-row-gap: 10px;
+  }
 }
 
 .titleBox {
@@ -27,4 +32,10 @@
   border-radius: 8px;
   border: 1px solid rgba(153, 153, 153, 0.4);
   row-gap: 10px;
+
+  &.small {
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 16px;
+    width: 100%;
+  }
 }
